--- a/src/package.json
+++ b/src/package.json
@@ -1,17 +1,32 @@
 {
     "$schema": "https://www.schemastore.org/package.json",
     "private": true,
-    "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.7"
+        "laravel-mix": "^6.0.49",
+        "tailwindcss": "^4.1.18"
+    },
+    "dependencies": {
+        "@floating-ui/dom": "^1.7.4",
+        "@shopify/draggable": "^1.2.1",
+        "@tailwindcss/postcss": "^4.1.18",
+        "chart.js": "^4.5.1",
+        "chartjs-gauge": "^0.3.0",
+        "choices.js": "^11.1.0",
+        "flatpickr": "^4.6.13",
+        "inputmask": "^5.0.9",
+        "overlayscrollbars": "^2.13.0",
+        "postcss": "^8.5.6",
+        "swiper": "^12.0.3"
     }
 }
