--- a/src/.env.example
+++ b/src/.env.example
@@ -21,7 +21,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql8
+DB_HOST=mysqlsutipaycursos
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=laravel
