--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
 
   nginxsutipaycursos:
     image: nginx:alpine
-    container_name: nginx
+    container_name: nginxsutipaycursos
     restart: always
     tty: true
     ports:
