--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     ports:
       - "8029:80"
     volumes:
-      - ./:/var/www
+      - ./src:/var/www
       - ./.docker/nginx/conf.d:/etc/nginx/conf.d
       - ./.docker/nginx/log:/var/log/nginx
     depends_on:
