--- a/src/public/mix-manifest.json
+++ b/src/public/mix-manifest.json
@@ -1,6 +1,23 @@
 {
     "/assets/js/scripts.js": "/assets/js/scripts.js?id=01de89bd3a8a4abd9aa069c4f2b4c4e7",
-    "/assets/css/styles.css": "/assets/css/styles.css?id=c2bfd94a1d5684feabc2629ad86574c3",
+    "/assets/css/styles.css": "/assets/css/styles.css?id=08c7a463e9aff3f9bc12f390c20bd7b7",
+    "/assets/icons/line-awesome/css/line-awesome.css": "/assets/icons/line-awesome/css/line-awesome.css?id=9d2fc77cbfee5bb6495477c39729b5b2",
+    "/assets/icons/line-awesome/css/line-awesome.min.css": "/assets/icons/line-awesome/css/line-awesome.min.css?id=73db02545cf13e8c82b51b62782df0d6",
+    "/assets/icons/line-awesome/fonts/la-brands-400.eot": "/assets/icons/line-awesome/fonts/la-brands-400.eot?id=c69359fa665afd15b666039653530689",
+    "/assets/icons/line-awesome/fonts/la-brands-400.svg": "/assets/icons/line-awesome/fonts/la-brands-400.svg?id=9769d0a6a42cf73df12bc63a7a994131",
+    "/assets/icons/line-awesome/fonts/la-brands-400.ttf": "/assets/icons/line-awesome/fonts/la-brands-400.ttf?id=8911f0f84d1c565ef500560b054b4ef3",
+    "/assets/icons/line-awesome/fonts/la-brands-400.woff": "/assets/icons/line-awesome/fonts/la-brands-400.woff?id=c1705206b50dd4d7869e4817963abad1",
+    "/assets/icons/line-awesome/fonts/la-brands-400.woff2": "/assets/icons/line-awesome/fonts/la-brands-400.woff2?id=3e10acc80db493acf067bca24c94f626",
+    "/assets/icons/line-awesome/fonts/la-regular-400.eot": "/assets/icons/line-awesome/fonts/la-regular-400.eot?id=0e21f45e6d74f0435c21a174211c7707",
+    "/assets/icons/line-awesome/fonts/la-regular-400.svg": "/assets/icons/line-awesome/fonts/la-regular-400.svg?id=55c57a74937e6de260b67c62522f7ea1",
+    "/assets/icons/line-awesome/fonts/la-regular-400.ttf": "/assets/icons/line-awesome/fonts/la-regular-400.ttf?id=0fe64928183a2c61d52e1af446b51bd1",
+    "/assets/icons/line-awesome/fonts/la-regular-400.woff": "/assets/icons/line-awesome/fonts/la-regular-400.woff?id=dec100a714dc8bf58bca2950c3fdf755",
+    "/assets/icons/line-awesome/fonts/la-regular-400.woff2": "/assets/icons/line-awesome/fonts/la-regular-400.woff2?id=ab07ca6ee580fc0e1d5d6867f4148c84",
+    "/assets/icons/line-awesome/fonts/la-solid-900.eot": "/assets/icons/line-awesome/fonts/la-solid-900.eot?id=f27369c4c306372d2ae2e7bbc9c9761b",
+    "/assets/icons/line-awesome/fonts/la-solid-900.svg": "/assets/icons/line-awesome/fonts/la-solid-900.svg?id=79be4e9fcffc796ec3b2cb9a1f46d39e",
+    "/assets/icons/line-awesome/fonts/la-solid-900.ttf": "/assets/icons/line-awesome/fonts/la-solid-900.ttf?id=e94d1ae8bde81486f9abf4486d91d856",
+    "/assets/icons/line-awesome/fonts/la-solid-900.woff": "/assets/icons/line-awesome/fonts/la-solid-900.woff?id=6902b6b6771bdac37593a2f809beb717",
+    "/assets/icons/line-awesome/fonts/la-solid-900.woff2": "/assets/icons/line-awesome/fonts/la-solid-900.woff2?id=3081738cd9c2c9847cb10245f924f17f",
     "/assets/images/suitpaycursos.png": "/assets/images/suitpaycursos.png?id=362bae2b9be9cafbe9bb6e70944f0011",
     "/assets/js/scripts.js.LICENSE.txt": "/assets/js/scripts.js.LICENSE.txt?id=f0d42d154d7939843e81af21823ff34a"
 }
