--- a/src/.env.example
+++ b/src/.env.example
@@ -2,9 +2,10 @@ APP_NAME="Suitpay Cursos"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
+APP_TIMEZONE="America/Sao_Paulo"
 APP_URL=http://localhost:8029
 
-APP_LOCALE=en
+APP_LOCALE=pt_BR
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
