--- a/src/public/mix-manifest.json
+++ b/src/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/assets/js/scripts.js": "/assets/js/scripts.js?id=7af4381e11e251f987a8556d62f90ebb",
-    "/assets/css/styles.css": "/assets/css/styles.css?id=cb59245e31fadec1548caa32227c2be0",
+    "/assets/css/styles.css": "/assets/css/styles.css?id=3d6d8fbfff93b408e9a8df3c70d624d1",
     "/assets/icons/line-awesome/css/line-awesome.css": "/assets/icons/line-awesome/css/line-awesome.css?id=b0d756ce55a1b49db891d1966fa7e3d5",
     "/assets/icons/line-awesome/css/line-awesome.min.css": "/assets/icons/line-awesome/css/line-awesome.min.css?id=d339ccc30ced2482134711bae499a523",
     "/assets/icons/line-awesome/fonts/la-brands-400.eot": "/assets/icons/line-awesome/fonts/la-brands-400.eot?id=c69359fa665afd15b666039653530689",
@@ -18,6 +18,7 @@
     "/assets/icons/line-awesome/fonts/la-solid-900.ttf": "/assets/icons/line-awesome/fonts/la-solid-900.ttf?id=e94d1ae8bde81486f9abf4486d91d856",
     "/assets/icons/line-awesome/fonts/la-solid-900.woff": "/assets/icons/line-awesome/fonts/la-solid-900.woff?id=6902b6b6771bdac37593a2f809beb717",
     "/assets/icons/line-awesome/fonts/la-solid-900.woff2": "/assets/icons/line-awesome/fonts/la-solid-900.woff2?id=3081738cd9c2c9847cb10245f924f17f",
+    "/assets/images/favicon.jpg": "/assets/images/favicon.jpg?id=71b8f48c45ac87ee0ca2c478212d0851",
     "/assets/images/suitpaycursos.png": "/assets/images/suitpaycursos.png?id=362bae2b9be9cafbe9bb6e70944f0011",
     "/assets/js/scripts.js.LICENSE.txt": "/assets/js/scripts.js.LICENSE.txt?id=24b67d164cb585e9d156fea195319118"
 }
